[metadata]
name = mistral_actions
summary = a collection of custom actions for mistral
description-file =
    README.md
license = Apache License, Version 2.0
author = int32bit
author-email = krystism@gmail.com
home-page = http://int32bit.me
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    mistral_actions

[entry_points]
mistral.actions =
    servers.assert_status = mistral_actions.nova.servers:ServerAssertStatus

[wheel]
universal = 1

[pbr]
warnerrors = true
